syntax = "proto3";
package routerprotocol.routerchain.crosschain;

option go_package = "github.com/router-protocol/sdk-go/routerchain/crosschain/types";

import "multichain/chain_type.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

message CrosschainAckRequest {
  string ack_src_chain_id = 1; 
  uint64 ack_request_identifier = 2; 
  uint64 blockHeight = 3; 
  string destTxHash = 4; 
  string relayerRouterAddress = 5; 
  string ack_dest_chain_id = 6; 
  string request_sender   = 7;
  uint64 requestIdentifier = 8; 
  routerprotocol.routerchain.multichain.ChainType ack_src_chain_type   = 9;
  routerprotocol.routerchain.multichain.ChainType ack_dest_chain_type  = 10;
  uint64 feeConsumed = 11;
  bytes execData = 12; 
  bool execStatus = 13; 
  string ethSigner = 14; 
  string signature = 15; 
  cosmos.base.v1beta1.Coin ack_fee_deducted = 16 [(gogoproto.nullable) = false];
  string status = 17; 
}

